// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Recipe-List tests Recipe-List snapshot Logged In & Admin test 1`] = `
<div>
  <h3>
    cookEATrepeat Recipes
  </h3>
  <table
    className="table"
  >
    <thead
      className="thead-light"
    >
      <tr>
        <th>
          Recipe
        </th>
        <th>
          Animal
        </th>
        <th>
          Ingredients
        </th>
        <th>
          Instructions
        </th>
        <th>
          Date
        </th>
        <th>
          Recipe Image
        </th>
        <th>
          Actions
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Test
        </td>
        <td>
          pork
        </td>
        <td>
          Test
          ...
        </td>
        <td>
          Test
          ...
        </td>
        <td>
          2019-11-06
        </td>
        <td>
          <div
            className="rec_img_box"
          >
            <a
              href="/recipe/1"
              onClick={[Function]}
            >
              <img
                alt="Not Available"
                id="recipe_img"
                src="https://cer-images.s3.amazonaws.com/images/Test.jpg"
                type="image"
              />
            </a>
          </div>
        </td>
        <td>
          <div
            id="recipe-action"
          >
            <button
              className="btn btn-outline-primary col-auto col-mr-auto"
            >
              <a
                href="/edit/1"
                onClick={[Function]}
              >
                edit
              </a>
            </button>
          </div>
          <div
            id="recipe-action"
          >
            <button
              className="btn btn-outline-primary col-auto col-mr-auto"
              href="#"
              onClick={[Function]}
            >
              <a
                href="/"
                onClick={[Function]}
              >
                delete
              </a>
            </button>
          </div>
        </td>
      </tr>
      <tr>
        <td>
          Test
        </td>
        <td>
          pork
        </td>
        <td>
          Test
          ...
        </td>
        <td>
          Test
          ...
        </td>
        <td>
          2019-11-06
        </td>
        <td>
          <div
            className="rec_img_box"
          >
            <a
              href="/recipe/2"
              onClick={[Function]}
            >
              <img
                alt="Not Available"
                id="recipe_img"
                src="https://cer-images.s3.amazonaws.com/images/Test.jpg"
                type="image"
              />
            </a>
          </div>
        </td>
        <td>
          <div
            id="recipe-action"
          >
            <button
              className="btn btn-outline-primary col-auto col-mr-auto"
            >
              <a
                href="/edit/2"
                onClick={[Function]}
              >
                edit
              </a>
            </button>
          </div>
          <div
            id="recipe-action"
          >
            <button
              className="btn btn-outline-primary col-auto col-mr-auto"
              href="#"
              onClick={[Function]}
            >
              <a
                href="/"
                onClick={[Function]}
              >
                delete
              </a>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Recipe-List tests Recipe-List snapshot test 1`] = `
<div>
  <h3>
    cookEATrepeat Recipes
  </h3>
  <table
    className="table"
  >
    <thead
      className="thead-light"
    >
      <tr>
        <th>
          Recipe
        </th>
        <th>
          Animal
        </th>
        <th>
          Ingredients
        </th>
        <th>
          Instructions
        </th>
        <th>
          Date
        </th>
        <th>
          Recipe Image
        </th>
        <th>
          Actions
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Test
        </td>
        <td>
          pork
        </td>
        <td>
          Test
          ...
        </td>
        <td>
          Test
          ...
        </td>
        <td>
          2019-11-06
        </td>
        <td>
          <div
            className="rec_img_box"
          >
            <a
              href="/recipe/1"
              onClick={[Function]}
            >
              <img
                alt="Not Available"
                id="recipe_img"
                src="https://cer-images.s3.amazonaws.com/images/Test.jpg"
                type="image"
              />
            </a>
          </div>
        </td>
        <td />
      </tr>
      <tr>
        <td>
          Test
        </td>
        <td>
          pork
        </td>
        <td>
          Test
          ...
        </td>
        <td>
          Test
          ...
        </td>
        <td>
          2019-11-06
        </td>
        <td>
          <div
            className="rec_img_box"
          >
            <a
              href="/recipe/2"
              onClick={[Function]}
            >
              <img
                alt="Not Available"
                id="recipe_img"
                src="https://cer-images.s3.amazonaws.com/images/Test.jpg"
                type="image"
              />
            </a>
          </div>
        </td>
        <td />
      </tr>
    </tbody>
  </table>
</div>
`;
